fix: truncate long thread names

--- a/frontend/src/styles/index.scss
+++ b/frontend/src/styles/index.scss
@@ -52,6 +52,7 @@
 	}
 
 	& a {
+		@include truncate;
 		display: block;
 		width: 100%;
 		padding: 2px 4px;
